--- a/connectED/src/communication/ChatManager.fxml
+++ b/connectED/src/communication/ChatManager.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane style="-fx-background-color: #2c2c2c;" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="server.ServerController">
+<Pane style="-fx-background-color: #2c2c2c;" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="communication.TabController">
    <children>
       <TabPane fx:id="chatTab" layoutY="35.0" prefHeight="475.0" prefWidth="400.0" />
       <Button layoutY="8.0" mnemonicParsing="false" onAction="#newChatTab" text="Take another connection" />
