--- a/connectED/src/communication/ChatTab.fxml
+++ b/connectED/src/communication/ChatTab.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefWidth="351.0" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.ClientController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="communication.ChatController">
    <children>
       <ListView fx:id="chatWindow" prefHeight="300.0" prefWidth="400.0" />
       <TextArea fx:id="userText" editable="false" onKeyPressed="#handleChatEnterKey" prefHeight="75.0" prefWidth="400.0" wrapText="true" />
