--- a/connectED/src/communication/ChatTab.fxml
+++ b/connectED/src/communication/ChatTab.fxml
@@ -2,11 +2,21 @@
 
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextArea?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="communication.ChatController">
+
+<GridPane xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="communication.ChatController">
+   <columnConstraints>
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints minHeight="10.0" percentHeight="80.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" percentHeight="20.0" vgrow="SOMETIMES" />
+   </rowConstraints>
    <children>
-      <ListView fx:id="chatWindow" prefHeight="300.0" prefWidth="400.0" />
-      <TextArea fx:id="userText" editable="false" onKeyPressed="#handleChatEnterKey" prefHeight="75.0" prefWidth="400.0" wrapText="true" />
+      <ListView fx:id="chatWindow" />
+      <TextArea fx:id="userText" editable="false" onKeyPressed="#handleChatEnterKey" wrapText="true" GridPane.rowIndex="1" />
    </children>
-</VBox>
+</GridPane>
