Added buttons for student, student helper and student assistant, as well as changing som code thereafter

--- a/connectED/src/communication/ChatManager.fxml
+++ b/connectED/src/communication/ChatManager.fxml
@@ -10,8 +10,9 @@
       <HBox>
          <children>
             <Button mnemonicParsing="false" onAction="#newChatTab" text="Take another connection" />
-            <Button fx:id="giveHelpBtn" mnemonicParsing="false" onAction="#setHostMode" text="Give Help" />
-            <Button fx:id="getHelpBtn" mnemonicParsing="false" onAction="#setClientMode" text="Get Help" />
+            <Button fx:id="studentHelperBtn" mnemonicParsing="false" onAction="#setStudentHelperMode" text="Student Helper" />
+            <Button fx:id="studentAssistantBtn" mnemonicParsing="false" onAction= "#setAssistantMode" text="Student Assistant" />
+            <Button fx:id="studentBtn" mnemonicParsing="false" onAction="#setStudentMode" text="Student" />
          </children>
       </HBox>
       <TabPane fx:id="chatTab" />
