Created buttons for ITGK and Java, as well as methods for creating tags based on users and subjects. Problem: some logical errors when connecting student assistant/helper with student; when choosing different subjects to give/get help, the two always connects, even though this shouldn't happen.

--- a/connectED/src/communication/ChatManager.fxml
+++ b/connectED/src/communication/ChatManager.fxml
@@ -13,6 +13,8 @@
             <Button fx:id="studentHelperBtn" mnemonicParsing="false" onAction="#setStudentHelperMode" text="Student Helper" />
             <Button fx:id="studentAssistantBtn" mnemonicParsing="false" onAction= "#setAssistantMode" text="Student Assistant" />
             <Button fx:id="studentBtn" mnemonicParsing="false" onAction="#setStudentMode" text="Student" />
+            <Button fx:id="javaBtn" mnemonicParsing = "false" onAction="#initializeJavaButton" text="Java"/>
+            <Button fx:id="itgkBtn" mnemonicParsing = "false" onAction="#initializeITGKButton" text="ITGK"/>
          </children>
       </HBox>
       <TabPane fx:id="chatTab" />
