--- a/connectED/src/communication/PopUpSubject.fxml
+++ b/connectED/src/communication/PopUpSubject.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox style="-fx-background-color: #7A7A7A;" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="communication.ChatTabController">
+<VBox style="-fx-background-color: #7A7A7A;" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="communication.PopUpSubjectController">
    <children>
       <HBox>
          <children>
@@ -13,6 +13,5 @@
             <Button fx:id="itgkBtn" mnemonicParsing = "false" onAction="#initializeITGKButton" text="ITGK"/>
          </children>
       </HBox>
-      <TabPane fx:id="chatTab" />
    </children>
 </VBox>
