--- a/connectED/src/mainWindow/InteractionTabManager.fxml
+++ b/connectED/src/mainWindow/InteractionTabManager.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.web.WebView?>
 
-<TabPane style="-fx-background-color: BLACK;" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainWindow.InteractionTabManagerController">
+<TabPane fx:id="tabContainer" style="-fx-background-color: BLACK;" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainWindow.InteractionTabManagerController">
   <tabs>
     <Tab text="Code">
          <content>
