--- a/connectED/src/mainWindow/MainFrame.fxml
+++ b/connectED/src/mainWindow/MainFrame.fxml
@@ -4,21 +4,22 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.web.WebView?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainWindow.MainFrameController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainWindow.MainFrameController">
   <columnConstraints>
     <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" minWidth="10.0" percentWidth="60.0" prefWidth="100.0" />
     <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" minWidth="10.0" percentWidth="40.0" prefWidth="100.0" />
   </columnConstraints>
   <rowConstraints>
     <RowConstraints minHeight="10.0" percentHeight="40.0" prefHeight="30.0" valignment="TOP" vgrow="ALWAYS" />
-      <RowConstraints percentHeight="10.0" valignment="TOP" vgrow="ALWAYS" />
+      <RowConstraints maxHeight="10.0" percentHeight="10.0" prefHeight="10.0" valignment="TOP" vgrow="ALWAYS" />
       <RowConstraints minHeight="10.0" percentHeight="50.0" prefHeight="30.0" valignment="TOP" vgrow="ALWAYS" />
   </rowConstraints>
    <children>
       <Pane fx:id="interactionPane" style="-fx-background-color: RED;" GridPane.rowSpan="3" />
       <Pane fx:id="chatPane" style="-fx-background-color: BLUE;" GridPane.columnIndex="1" GridPane.rowIndex="2" />
       <Pane fx:id="infoPane" style="-fx-background-color: GREEN;" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-      <Pane fx:id="stuffPane" style="-fx-background-color: PURPLE;" GridPane.columnIndex="1" />
+      <WebView fx:id="searchBrowser" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" />
    </children>
 </GridPane>
