--- a/connectED/src/communication/ChatManager.fxml
+++ b/connectED/src/communication/ChatManager.fxml
@@ -1,20 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TabPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox style="-fx-background-color: #7A7A7A;" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="communication.ChatTabController">
+<VBox xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="communication.ChatTabController">
    <children>
-      <HBox>
-         <children>
-            <Button mnemonicParsing="false" onAction="#newChatTab" text="Take another connection" />
-            <Button fx:id="studentHelperBtn" mnemonicParsing="false" onAction="#setStudentHelperMode" text="Student Helper" />
-            <Button fx:id="studentAssistantBtn" mnemonicParsing="false" onAction= "#setAssistantMode" text="Student Assistant" />
-            <Button fx:id="studentBtn" mnemonicParsing="false" onAction="#setStudentMode" text="Student" /> 
-         </children>
-      </HBox>
       <TabPane fx:id="chatTab" />
    </children>
 </VBox>
