--- a/connectED/src/communication/ChatTab.fxml
+++ b/connectED/src/communication/ChatTab.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="communication.ChatController">
+<GridPane stylesheets="@Communication.css" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="communication.ChatController">
    <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
    </columnConstraints>
@@ -18,6 +18,6 @@
    <children>
       <ListView fx:id="chatWindow" />
       <TextArea fx:id="userText" editable="false" onKeyPressed="#handleChatEnterKey" wrapText="true" GridPane.rowIndex="1" />
-      <Button fx:id="microphoneBtn" mnemonicParsing="false" onAction="#requestVoiceCommunication" text="Mic" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="TOP" />
+      <Button fx:id="microphoneBtn" mnemonicParsing="false" onAction="#requestVoiceCommunication" prefHeight="30.0" prefWidth="30.0" GridPane.halignment="RIGHT" GridPane.valignment="TOP" />
    </children>
 </GridPane>
