--- a/connectED/src/loginSystem/LoginWindow.fxml
+++ b/connectED/src/loginSystem/LoginWindow.fxml
@@ -4,8 +4,12 @@
 <?import javafx.scene.web.WebView?>
 
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="loginSystem.LoginWindowController">
-   <children>
-      <WebView fx:id="browser" layoutX="-2.0" prefHeight="400.0" prefWidth="600.0" />
-   </children>
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
+	minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0"
+	xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1"
+	fx:controller="loginSystem.LoginWindowController">
+	<children>
+		<WebView fx:id="browser" layoutX="-2.0" prefHeight="400.0"
+			prefWidth="600.0" />
+	</children>
 </Pane>
