--- a/connectED/src/communication/ChatManager.fxml
+++ b/connectED/src/communication/ChatManager.fxml
@@ -3,8 +3,9 @@
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="communication.ChatTabController">
-   <children>
-      <TabPane fx:id="chatTab" />
-   </children>
+<VBox xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1"
+	fx:controller="communication.ChatTabController">
+	<children>
+		<TabPane fx:id="chatTab" />
+	</children>
 </VBox>
