--- a/connectED/src/communication/ChatTab.fxml
+++ b/connectED/src/communication/ChatTab.fxml
@@ -7,17 +7,23 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane stylesheets="@Communication.css" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="communication.ChatController">
-   <columnConstraints>
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-   </columnConstraints>
-   <rowConstraints>
-      <RowConstraints minHeight="10.0" percentHeight="80.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" percentHeight="20.0" vgrow="SOMETIMES" />
-   </rowConstraints>
-   <children>
-      <ListView fx:id="chatWindow" />
-      <TextArea fx:id="userText" editable="false" onKeyPressed="#handleChatEnterKey" wrapText="true" GridPane.rowIndex="1" />
-      <Button fx:id="microphoneBtn" mnemonicParsing="false" onAction="#requestVoiceCommunication" prefHeight="30.0" prefWidth="30.0" GridPane.halignment="RIGHT" GridPane.valignment="TOP" />
-   </children>
+<GridPane stylesheets="@Communication.css" xmlns="http://javafx.com/javafx/8.0.102"
+	xmlns:fx="http://javafx.com/fxml/1" fx:controller="communication.ChatController">
+	<columnConstraints>
+		<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+	</columnConstraints>
+	<rowConstraints>
+		<RowConstraints minHeight="10.0" percentHeight="80.0"
+			vgrow="SOMETIMES" />
+		<RowConstraints minHeight="10.0" percentHeight="20.0"
+			vgrow="SOMETIMES" />
+	</rowConstraints>
+	<children>
+		<ListView fx:id="chatWindow" />
+		<TextArea fx:id="userText" editable="false" onKeyPressed="#handleChatEnterKey"
+			wrapText="true" GridPane.rowIndex="1" />
+		<Button fx:id="microphoneBtn" mnemonicParsing="false"
+			onAction="#requestVoiceCommunication" prefHeight="30.0" prefWidth="30.0"
+			GridPane.halignment="RIGHT" GridPane.valignment="TOP" />
+	</children>
 </GridPane>
