--- a/connectED/src/mainWindow/InteractionTabManager.fxml
+++ b/connectED/src/mainWindow/InteractionTabManager.fxml
@@ -4,11 +4,16 @@
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.web.WebView?>
 
-<TabPane fx:id="tabContainer" styleClass="tabBackground" stylesheets="@mainWindow.css" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainWindow.InteractionTabManagerController">
-  <tabs>
-    <Tab text="Shared Code">
-         <content>
-            <WebView fx:id="sharedCodeBrowser" minHeight="-1.0" minWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" />
-         </content></Tab>
-  </tabs>
+<TabPane fx:id="tabContainer" styleClass="tabBackground"
+	stylesheets="@mainWindow.css" tabClosingPolicy="UNAVAILABLE"
+	xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1"
+	fx:controller="mainWindow.InteractionTabManagerController">
+	<tabs>
+		<Tab text="Shared Code">
+			<content>
+				<WebView fx:id="sharedCodeBrowser" minHeight="-1.0"
+					minWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" />
+			</content>
+		</Tab>
+	</tabs>
 </TabPane>
