--- a/connectED/src/mainWindow/ModeSelection.fxml
+++ b/connectED/src/mainWindow/ModeSelection.fxml
@@ -10,29 +10,21 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<GridPane styleClass="tabBackground" stylesheets="@mainWindow.css"
-	xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1"
-	fx:controller="mainWindow.ModeSelectionController">
+<GridPane styleClass="tabBackground" stylesheets="@mainWindow.css" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainWindow.ModeSelectionController">
 	<columnConstraints>
 		<ColumnConstraints />
-		<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"
-			prefWidth="100.0" />
+		<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
 	</columnConstraints>
 	<rowConstraints>
 		<RowConstraints />
-		<RowConstraints minHeight="10.0" prefHeight="30.0"
-			vgrow="SOMETIMES" />
-		<RowConstraints minHeight="10.0" prefHeight="30.0"
-			vgrow="SOMETIMES" />
-		<RowConstraints minHeight="10.0" prefHeight="30.0"
-			vgrow="SOMETIMES" />
+		<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+		<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+		<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
 	</rowConstraints>
 	<children>
-		<VBox alignment="CENTER" GridPane.columnIndex="1"
-			GridPane.rowIndex="1">
+		<VBox alignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="1">
 			<children>
-				<Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0"
-					text="Choose to give or get help">
+				<Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Choose to give or get help">
 					<font>
 						<Font name="System Bold" size="24.0" />
 					</font>
@@ -42,8 +34,7 @@
 				</Text>
 				<HBox alignment="CENTER">
 					<children>
-						<Button fx:id="assistantBtn" focusTraversable="false"
-							mnemonicParsing="false" text="Student Assistant">
+						<Button fx:id="assistantBtn" focusTraversable="false" mnemonicParsing="false" text="Student Assistant">
 							<HBox.margin>
 								<Insets right="10.0" />
 							</HBox.margin>
@@ -51,8 +42,7 @@
 								<Font name="System Bold" size="12.0" />
 							</font>
 						</Button>
-						<Button fx:id="helperBtn" focusTraversable="false"
-							mnemonicParsing="false" text="Helpful student">
+						<Button fx:id="helperBtn" focusTraversable="false" mnemonicParsing="false" text="Helpful student">
 							<HBox.margin>
 								<Insets right="10.0" />
 							</HBox.margin>
@@ -60,8 +50,7 @@
 								<Font name="System Bold" size="12.0" />
 							</font>
 						</Button>
-						<Button fx:id="studentBtn" focusTraversable="false"
-							mnemonicParsing="false" text="Need Help!">
+						<Button fx:id="studentBtn" focusTraversable="false" mnemonicParsing="false" text="Need Help!">
 							<HBox.margin>
 								<Insets right="10.0" />
 							</HBox.margin>
@@ -76,11 +65,9 @@
 				<Insets />
 			</GridPane.margin>
 		</VBox>
-		<VBox alignment="CENTER" GridPane.columnIndex="1"
-			GridPane.rowIndex="2">
+		<VBox alignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="2">
 			<children>
-				<Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0"
-					text="Choose Subject">
+				<Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Choose Subject">
 					<font>
 						<Font name="System Bold" size="24.0" />
 					</font>
@@ -90,8 +77,7 @@
 				</Text>
 				<HBox alignment="CENTER">
 					<children>
-						<Button fx:id="javaBtn" focusTraversable="false"
-							mnemonicParsing="false" text="TDT4100 Java">
+						<Button fx:id="javaBtn" focusTraversable="false" mnemonicParsing="false" text="TDT4100 Java">
 							<HBox.margin>
 								<Insets right="10.0" />
 							</HBox.margin>
@@ -99,8 +85,7 @@
 								<Font name="System Bold" size="12.0" />
 							</font>
 						</Button>
-						<Button fx:id="itgkPythonBtn" focusTraversable="false"
-							mnemonicParsing="false" text="ITGK Python">
+						<Button fx:id="itgkPythonBtn" focusTraversable="false" mnemonicParsing="false" text="ITGK Python">
 							<HBox.margin>
 								<Insets right="10.0" />
 							</HBox.margin>
@@ -115,20 +100,14 @@
 				<Insets />
 			</GridPane.margin>
 		</VBox>
-		<VBox alignment="CENTER" GridPane.columnIndex="1"
-			GridPane.rowIndex="3">
+		<VBox alignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="3">
 			<children>
-				<Button fx:id="connectBtn" alignment="CENTER"
-					focusTraversable="false" mnemonicParsing="false" prefHeight="80.0"
-					prefWidth="80.0"
-					style="-fx-background-radius: 50%; -fx-background-color: linear-gradient(#FF8708,#75260C); -fx-effect: dropshadow( gaussian , rgba(0,0,0,0.75) , 4,0,0,1 );"
-					text="CONNECT" textAlignment="CENTER" textFill="WHITE">
+				<Button fx:id="connectBtn" alignment="CENTER" focusTraversable="false" mnemonicParsing="false" prefHeight="110.0" prefWidth="110.0" style="-fx-background-radius: 50%; -fx-background-color: linear-gradient(#FF8708,#75260C); -fx-effect: dropshadow( gaussian , rgba(0,0,0,0.75) , 4,0,0,1 );" text="CONNECT" textAlignment="CENTER" textFill="WHITE">
 					<font>
 						<Font name="System Bold" size="13.0" />
 					</font>
 				</Button>
-				<Text fx:id="errorText" fill="#cd0000" strokeType="OUTSIDE"
-					strokeWidth="0.0" text="Select your purpose and subject before connecting">
+				<Text fx:id="errorText" fill="#cd0000" strokeType="OUTSIDE" strokeWidth="0.0" text="Select your purpose and subject before connecting">
 					<font>
 						<Font name="System Bold" size="17.0" />
 					</font>
